Rename and refactor main file